MyProject/force-app/main/default/objects/Collage__c/Collage__c.object-meta.xml
<CustomObject>
    <label>Collage</label>
    <nameField>
        <label>Collage Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>