MyProject/force-app/main/default/objects/Collage__c/fields/Count_of_Teachers__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Teachers__c</fullName>
    <label>Count of Teachers</label>
    <summaryForeignKey>Teacher__c.Collage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>