MyProject/force-app/main/default/objects/Collage__c/fields/Grant_Status__c.field-meta.xml
<CustomField>
    <fullName>Grant_Status__c</fullName>
    <label>Grant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Granted</fullName>
            </value>
            <value>
                <fullName>Under Process</fullName>
            </value>
            <value>
                <fullName>Non Grant</fullName>
            </value>
            <value>
                <fullName>Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>