MyProject/force-app/main/default/objects/Collage__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST</label>
    <summarizedField>Teacher__c.GST__c</summarizedField>
    <summaryForeignKey>Teacher__c.Collage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>