MyProject/force-app/main/default/objects/Collage__c/fields/Total_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary__c</fullName>
    <label>Total Salary</label>
    <summarizedField>Teacher__c.Salary__c</summarizedField>
    <summaryForeignKey>Teacher__c.Collage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>