MyProject/force-app/main/default/objects/Collage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>States__c</columns>
    <columns>Grant_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>